2007-12-04  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #500210

	* e-plugin.h:
	* e-plugin.c: (e_plugin_configure), (e_plugin_is_configurable),
	(epl_configure), (e_plugin_get_configure_widget),
	(epl_get_configure_widget): Removed old configure functions,
	replaced by get_configure_widget functions, to be able show
	plugin configuration in a tab of plugin manager.

2007-12-03  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #392747

	* e-utils.c (e_get_month_name), (e_get_weekday_name):
	New functions cache localized month and weekday names (respectively)
	for easier retrieval than resorting to strftime().

2007-11-13  Ondrej Jirman  <megous@megous.com>

	** Fix for bug #494320

	* e-popup.c: (e_popup_create_menu): Add support for redefining
	existing menu items.

2007-11-05  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #492692

	* e-util.c: (e_str_case_compare): Leak fix.

2007-11-03  Matthew Barnes  <mbarnes@redhat.com>

	** Remove dead files from source control.  The dates below
	   indicate when the file was removed from Makefile.am.
	   Fixes part of bug #478704.

	* e-categories-master-list-wombat.c	(Jun 2005)
	* e-categories-master-list-wombat.h	(Jun 2005)

2007-10-26  Sankar P  <psankar@novell.com>

	** Fix for bug #461272

	* e-plugin.c: (ep_load), (e_plugin_load_plugins),
	(e_plugin_is_configurable), (epl_configure):
	* e-plugin.h:
	Configure button should not be enabled for all.

2007-10-26  Kjartan Maraas  <kmaraas@gnome.org>

	* e-config.c:
	* e-event.c:
	* e-gui-utils.c:
	* e-import.c:
	* e-menu.c:
	* e-mktemp.c: (get_dir):
	* e-popup.c:
	* e-profile-event.c: (e_profile_event_peek):
	* e-util.c: (get_font_options):
	* e-xml-utils.c: (e_xml_get_string_prop_by_name),
	(e_xml_get_string_prop_by_name_with_default),
	(e_xml_get_translated_string_prop_by_name):

	Warning fixes.
	- NULL vs 0
	- ANSIfication of declarations
	- missing include

2007-10-12  Michael Monreal <michael.monreal@gmail.com>
