@@ -111,6 +111,10 @@ void		e_file_update_save_path		(gchar *uri,
 						 gboolean free);
 gchar *		e_file_get_save_path		(void);
 
+gboolean	e_file_lock_create ();
+void		e_file_lock_destroy ();
+gboolean 	e_file_lock_exists ();
+
 #ifdef __cplusplus
 }
 #endif /* __cplusplus */
